force-app/main/default/objects/HIC_Prefill_Requested__e/HIC_Prefill_Requested__e.object-meta.xml
<CustomObject>
    <label>HIC Prefill Requested</label>
    <pluralLabel>HIC Prefill Requested Events</pluralLabel>
</CustomObject>