force-app/main/default/objects/HIC_Prefill_Requested__e/fields/Onboarding_Id__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Id__c</fullName>
    <label>Onboarding Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>