force-app/main/default/objects/HIC_Prefill_Requested__e/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <label>Source Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>